[package]
name = "ipapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
json = "0.12.4"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
serde = { version = "1.0.188", feature = ["derive"] }
serde_json = "1.0.107"
